{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 74,
  "lineage": "ac2be13a-140c-e4a3-6a7b-f97392cf6428",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e7b894c845b49e1",
            "association_id": "eipassoc-060b05d40b9eb63c7",
            "domain": "vpc",
            "id": "eipalloc-09e7b894c845b49e1",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-00a362689c7a72a62",
            "private_dns": "ip-192-168-29-26.eu-west-1.compute.internal",
            "private_ip": "192.168.29.26",
            "public_dns": "ec2-52-210-160-8.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.210.160.8",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ctse",
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075bfb38e71e801a9",
            "association_id": "eipassoc-0de4b60db34396643",
            "domain": "vpc",
            "id": "eipalloc-075bfb38e71e801a9",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0447ffcb31568b7fd",
            "private_dns": "ip-192-168-94-112.eu-west-1.compute.internal",
            "private_ip": "192.168.94.112",
            "public_dns": "ec2-54-170-235-162.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.170.235.162",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ctse",
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ctse",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667021093945:internet-gateway/igw-01e488dff23c96a2d",
            "id": "igw-01e488dff23c96a2d",
            "owner_id": "667021093945",
            "tags": {
              "Name": "ctse"
            },
            "tags_all": {
              "Name": "ctse"
            },
            "vpc_id": "vpc-0e0e73f070935054c"
          },
          "dependencies": [
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09e7b894c845b49e1",
            "connectivity_type": "public",
            "id": "nat-092273c3468f7a201",
            "network_interface_id": "eni-00a362689c7a72a62",
            "private_ip": "192.168.29.26",
            "public_ip": "52.210.160.8",
            "subnet_id": "subnet-085c468035c36a3eb",
            "tags": {
              "Name": "NAT 1"
            },
            "tags_all": {
              "Name": "NAT 1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ctse",
            "aws_subnet.public_1",
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075bfb38e71e801a9",
            "connectivity_type": "public",
            "id": "nat-062cdadadc6a2a61b",
            "network_interface_id": "eni-0447ffcb31568b7fd",
            "private_ip": "192.168.94.112",
            "public_ip": "54.170.235.162",
            "subnet_id": "subnet-0f5e60588618192cb",
            "tags": {
              "Name": "NAT 2"
            },
            "tags_all": {
              "Name": "NAT 2"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ctse",
            "aws_subnet.public_2",
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667021093945:route-table/rtb-00b2b4c3fd38e967e",
            "id": "rtb-00b2b4c3fd38e967e",
            "owner_id": "667021093945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-092273c3468f7a201",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0e73f070935054c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ctse",
            "aws_nat_gateway.gw1",
            "aws_subnet.public_1",
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667021093945:route-table/rtb-04a245d30d95d07ff",
            "id": "rtb-04a245d30d95d07ff",
            "owner_id": "667021093945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-062cdadadc6a2a61b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0e73f070935054c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ctse",
            "aws_nat_gateway.gw2",
            "aws_subnet.public_2",
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667021093945:route-table/rtb-0823a8d40aa027aca",
            "id": "rtb-0823a8d40aa027aca",
            "owner_id": "667021093945",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01e488dff23c96a2d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0e73f070935054c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ctse",
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0151dbef78629b27f",
            "route_table_id": "rtb-00b2b4c3fd38e967e",
            "subnet_id": "subnet-0593454d3ae45023f"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.ctse",
            "aws_nat_gateway.gw1",
            "aws_route_table.private1",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9ce78605fff4fe6",
            "route_table_id": "rtb-04a245d30d95d07ff",
            "subnet_id": "subnet-03e2343ba57c53c0f"
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.ctse",
            "aws_nat_gateway.gw2",
            "aws_route_table.private2",
            "aws_subnet.private_2",
            "aws_subnet.public_2",
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a6d5b6cee07bdd1",
            "route_table_id": "rtb-0823a8d40aa027aca",
            "subnet_id": "subnet-085c468035c36a3eb"
          },
          "dependencies": [
            "aws_internet_gateway.ctse",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077201b8a2282d2ba",
            "route_table_id": "rtb-0823a8d40aa027aca",
            "subnet_id": "subnet-0f5e60588618192cb"
          },
          "dependencies": [
            "aws_internet_gateway.ctse",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667021093945:subnet/subnet-0593454d3ae45023f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0593454d3ae45023f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667021093945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-eu-west-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e0e73f070935054c"
          },
          "dependencies": [
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667021093945:subnet/subnet-03e2343ba57c53c0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e2343ba57c53c0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667021093945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-west-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-eu-west-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e0e73f070935054c"
          },
          "dependencies": [
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667021093945:subnet/subnet-085c468035c36a3eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085c468035c36a3eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "667021093945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-west-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-eu-west-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e0e73f070935054c"
          },
          "dependencies": [
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667021093945:subnet/subnet-0f5e60588618192cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5e60588618192cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "667021093945",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-west-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-eu-west-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e0e73f070935054c"
          },
          "dependencies": [
            "aws_vpc.ctse"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ctse",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:667021093945:vpc/vpc-0e0e73f070935054c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0da0395a3af8973c6",
            "default_route_table_id": "rtb-0baaeee2c0af2830a",
            "default_security_group_id": "sg-04c44bfb84e9710cc",
            "dhcp_options_id": "dopt-045bbb0a907e82737",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e0e73f070935054c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0baaeee2c0af2830a",
            "owner_id": "667021093945",
            "tags": {
              "Name": "ctse"
            },
            "tags_all": {
              "Name": "ctse"
            }
          }
        }
      ]
    }
  ]
}